--- a/label_studio_ml/examples/yolo/docker-compose.yml
+++ b/label_studio_ml/examples/yolo/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       # Determine the actual IP using 'ifconfig' (Linux/Mac) or 'ipconfig' (Windows).
       # or you can try http://host.docker.internal:<label-studio-port> if you run LS on the same machine
       - LABEL_STUDIO_HOST=${LABEL_STUDIO_HOST:-http://host.docker.internal:8080}
-      - LABEL_STUDIO_API_KEY=${LABEL_STUDIO_API_KEY}
+      - LABEL_STUDIO_API_KEY=${LABEL_STUDIO_API_KEY} #Add Your API_KEY Here
 
       # YOLO parameters
 
